--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -675,6 +675,8 @@ disable-ipv6=true
    #:fullscreen? #t
    #:sub-font-size 24
    #:x11-name "mpv"
+   #:osd-bar? #f
+   #:border? #f
    #:ytdl-format "best[height<=?900]"
    #:osd-fonts-dir (file-append (pkg "mpv-uosc") "/share/mpv/fonts")
    #:script-opts '(("network" . "yes")) ; thumbfast
@@ -682,8 +684,13 @@ disable-ipv6=true
    (plain-file "input.conf"
                (string-join
                 '("q quit-watch-later"
-                  "h seek -5" "l seek 5"
-                  "H seek -60" "L seek 60")
+                  "o script-binding uosc/flash-timeline"
+                  "TAB script-binding uosc/toggle-ui"
+                  "m no-osd cycle mute; script-binding uosc/flash-volume"
+                  "h seek -5; script-binding uosc/flash-timeline"
+                  "l seek 5; script-binding uosc/flash-timeline"
+                  "H seek -60; script-binding uosc/flash-timeline"
+                  "L seek 60; script-binding uosc/flash-timeline")
                 "\n"))
    #:scripts (list
               (file-append (pkg "mpv-mpris") "/lib/mpris.so")
@@ -1147,7 +1154,8 @@ REVERSE? it when true. Returns the selected buffer."
    emms-source-file-default-directory (expand-file-name "~/Sync/"))
   
   (after! browse-url
-    (add-to-list 'browse-url-handlers '("bandcamp.com" . browse-url-emms)))
+    (add-to-list 'browse-url-handlers '("bandcamp.com" . browse-url-emms))
+    (add-to-list 'browse-url-handlers '("bandcamp.com/album" . emms-add-ytdlp-playlist)))
 
   (require 'emms-mpris)
   (emms-mpris-enable)
@@ -1347,7 +1355,7 @@ REVERSE? it when true. Returns the selected buffer."
 #+end_src
 *** ytdlp
 #+begin_src elisp
-(defun emms-add-ytdlp-playlist (url)
+(defun emms-add-ytdlp-playlist (url &rest _)
   "Fetch playlist at URL with yt-dlp and add individual tracks to current emms playlist."
   (interactive "sURL: \n")
   (let* ((command (concat "yt-dlp -q --flat-playlist --no-download --dump-single-json " url))
@@ -1356,8 +1364,9 @@ REVERSE? it when true. Returns the selected buffer."
          (entries (alist-get 'entries json-data)))
 
     (seq-do
-     (-compose #'emms-add-url (-partial 'alist-get 'url))
-     entries)))
+     (-compose #'emms-add-url (-partial #'alist-get 'url))
+     entries)
+    (message "Added %d tracks" (length entries))))
 #+end_src
 ** dict
 [[https://github.com/BoboTiG/ebook-reader-dict][Wiktionary exports]]
@@ -1459,7 +1468,7 @@ services:
 "msmtp"
 #+end_src
 #+begin_src scheme :noweb-ref guix-file
-(".msmtprc" ,(local-file "../email/.msmtprc" "msmtprc"))
+(".config/msmtp/config" ,(local-file "../email/.config/msmtp/config"))
 #+end_src
 *** receiving
 #+begin_src scheme :noweb-ref guix-pkg
@@ -1467,7 +1476,7 @@ services:
 #+end_src
 #+begin_src scheme :noweb-ref guix-file
 (".mail" ,(symlink-to "/storage/data/mail"))
-(".config/isyncrc" ,(local-file "../email/.mbsyncrc" "mbsyncrc"))
+(".config/isyncrc" ,(local-file "../email/.config/isyncrc"))
 #+end_src
 *** notification
 #+begin_src scheme :noweb-ref guix-file
@@ -2613,6 +2622,16 @@ os.execlp('jaro', 'jaro',
     (setq magit-repository-directories `((,sarg-repos-dir . 2))
           magit-clone-default-directory (concat sarg-repos-dir "ext/"))))
 
+(defun sarg/magit-clone-or-open (url)
+  (let ((target-dir
+         (expand-file-name (magit-clone--url-to-name url)
+                           magit-clone-default-directory)))
+    (if (magit-git-repo-p target-dir)
+        (magit-status target-dir)
+      (magit-clone-regular url magit-clone-default-directory nil))
+
+    t))
+
 (after! browse-at-remote
   (setq browse-at-remote-prefer-symbolic nil))
 #+end_src
@@ -2654,7 +2673,7 @@ mod? dotfiles '~/devel/dotfiles/guix/Justfile'
 #+begin_src scheme :noweb-ref guix-pkg
 "git" "git:send-email" "git-crypt" "perl" "git-credential-oauth"
 #+end_src
-#+begin_src cfg :dest ".gitconfig"
+#+begin_src cfg :dest ".config/git/config"
 [user]
     name = 🐜(global 'name)🐜
     email = 🐜(global 'email)🐜
@@ -2675,9 +2694,9 @@ mod? dotfiles '~/devel/dotfiles/guix/Justfile'
     helper = oauth
 #+end_src
 
-#+RESULTS[6e62910aee9319039ee459724e8b21088cf45d0a]:
+#+RESULTS[507e70f32440df35b916a3afa91bd324c7793f77]:
 #+begin_src text :noweb-ref guix-file
-(".gitconfig"
+(".config/git/config"
 ,(mixed-text-file
   "cfg-file"
 "[user]\n"
@@ -2698,6 +2717,24 @@ mod? dotfiles '~/devel/dotfiles/guix/Justfile'
 "[credential]\n"
 "    helper = cache --timeout 21600  # six hours\n"
 "    helper = oauth"))
+#+end_src
+
+#+begin_src cfg :dest ".config/git/ignore"
+.direnv
+.vscode
+__pycache__/
+*.py[cod]
+#+end_src
+
+#+RESULTS[caf5025bcf1606e1512b769536d3a41c2102c1c5]:
+#+begin_src text :noweb-ref guix-file
+(".config/git/ignore"
+,(mixed-text-file
+  "cfg-file"
+".direnv\n"
+".vscode\n"
+"__pycache__/\n"
+"*.py[cod]"))
 #+end_src
 
 #+begin_src elisp
@@ -2985,16 +3022,6 @@ pgrep -f QtWebEngineProcess && qutebrowser ':config-source darkmode.py'
     (start-process "qutebrowser-private" nil
            "qutebrowser" "--target" "private-window" url)))
 
-(defun sarg/magit-clone-or-open (url)
-  (let ((target-dir
-         (expand-file-name (magit-clone--url-to-name url)
-                           magit-clone-default-directory)))
-    (if (magit-git-repo-p target-dir)
-        (magit-status target-dir)
-      (magit-clone-regular url magit-clone-default-directory nil))
-
-    t))
-
 (defun qutebrowser-bg-tabs ()
   (interactive)
   (qutebrowser-cmd-set "tabs.tabs_are_windows" "false" :temp)
@@ -3022,15 +3049,12 @@ pgrep -f QtWebEngineProcess && qutebrowser ':config-source darkmode.py'
   :config
   (add-to-list 'qutebrowser-theme-export-face-mappings '(webpage.bg . default)))
 #+end_src
-** TODO yeetube
+** yeetube
 #+begin_src elisp :tangle packages.el
-(package! yeetube
-  :recipe (:host codeberg :repo "thanosapollo/emacs-yeetube")
-  :pin "e179f00b065188b5c50af7e307fc262a6efea7ff")
+(package! yeetube :built-in t)
 #+end_src
-TODO: bump guix package
 #+begin_src scheme :noweb-ref guix-pkg
-;"emacs-yeetube"
+"emacs-yeetube"
 #+END_src
 #+begin_src elisp
 (use-package! yeetube
